Add @Creator DI methods

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,9 @@
 
         <jsr305.version>3.0.2</jsr305.version>
         <slf4j.version>1.7.30</slf4j.version>
+
         <junit.version>5.7.1</junit.version>
+        <logback.version>1.2.3</logback.version>
     </properties>
 
     <dependencyManagement>
@@ -50,7 +52,7 @@
             <version>${slf4j.version}</version>
         </dependency>
 
-        <!-- JUnit Jupiter -->
+        <!-- Test deps -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -59,6 +61,13 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
