Real example application

--- a/autumn-example/pom.xml
+++ b/autumn-example/pom.xml
@@ -14,6 +14,23 @@
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
+
+        <autumn.application.version>0.0.1</autumn.application.version>
+
+        <logback.version>1.2.3</logback.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>gg.amy.autumn</groupId>
+            <artifactId>autumn-application</artifactId>
+            <version>${autumn.application.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+    </dependencies>
 </project>
