--- a/autumn-example/pom.xml
+++ b/autumn-example/pom.xml
@@ -15,7 +15,7 @@
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
 
-        <autumn.application.version>0.0.1</autumn.application.version>
+        <autumn.web.version>0.0.1</autumn.web.version>
 
         <logback.version>1.2.3</logback.version>
     </properties>
@@ -23,8 +23,8 @@
     <dependencies>
         <dependency>
             <groupId>gg.amy.autumn</groupId>
-            <artifactId>autumn-application</artifactId>
-            <version>${autumn.application.version}</version>
+            <artifactId>autumn-web</artifactId>
+            <version>${autumn.web.version}</version>
         </dependency>
 
         <dependency>
