--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 
         <jsr305.version>3.0.2</jsr305.version>
         <slf4j.version>1.7.30</slf4j.version>
+        <immutables.version>2.8.2</immutables.version>
 
         <junit.version>5.7.1</junit.version>
         <logback.version>1.2.3</logback.version>
@@ -50,6 +51,14 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
+        </dependency>
+
+        <!-- Compile deps -->
+        <dependency>
+            <groupId>org.immutables</groupId>
+            <artifactId>value</artifactId>
+            <version>${immutables.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Test deps -->
