--- a/.github/workflows/test-java.yaml
+++ b/.github/workflows/test-java.yaml
@@ -8,6 +8,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
+          distribution: "adopt"
           java-version: "16"
       - run: ./mvnw clean test
       - run: bash <(curl -s https://codecov.io/bash)
