--- a/.github/workflows/test-java.yaml
+++ b/.github/workflows/test-java.yaml
@@ -12,3 +12,6 @@ jobs:
           java-version: "16"
       - run: ./mvnw clean test
       - run: bash <(curl -s https://codecov.io/bash)
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
