Basic Jackson wrapper

--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,10 @@
 
     <modules>
         <module>autumn-di</module>
+        <module>autumn-json</module>
         <module>autumn-web</module>
-        <module>autumn-example</module>
         <module>autumn-application</module>
+        <module>autumn-example</module>
     </modules>
 
     <properties>
