Stupid-simple data access layer

--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,9 @@
         <module>autumn-json</module>
         <module>autumn-config</module>
         <module>autumn-di</module>
-        <module>autumn-web</module>
+        <module>autumn-data</module>
         <module>autumn-application</module>
+        <module>autumn-web</module>
         <module>autumn-example</module>
     </modules>
 
