Rewrite config in CI

--- a/.github/workflows/test-java.yaml
+++ b/.github/workflows/test-java.yaml
@@ -20,6 +20,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      # Rewrite config file to use the correct host.
+      # TODO: UGLY HACK
+      - run: sed -i 'localhost:5432' 'postgres:5432' s/autumn-data/src/test/resources/config.hjson
       - uses: actions/setup-java@v2
         with:
           distribution: "adopt"
