--- a/.github/workflows/test-java.yaml
+++ b/.github/workflows/test-java.yaml
@@ -12,6 +12,8 @@ jobs:
           POSTGRES_DB: postgres
           POSTGRES_USERNAME: postgres
           POSTGRES_PASSWORD: postgres
+        ports:
+          - "5432:5432"
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
