--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,6 +1,6 @@
 before_install:
-  - ./ensure-java-16.sh install;
+  - ./ensure-java-16.sh install
 install:
   - if ! ./ensure-java-16 use; then source ~/.sdkman/bin/sdkman-init.sh; fi
   - java -version
-  - ./mvnw install
+  - ./mvnw install -DenableDatabaseTests=false
