--- a/autumn-application/pom.xml
+++ b/autumn-application/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>autumn-application</artifactId>
+    <version>0.0.2</version>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
