--- a/autumn-data/pom.xml
+++ b/autumn-data/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>autumn-data</artifactId>
+    <version>0.0.2</version>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
