--- a/autumn-config/pom.xml
+++ b/autumn-config/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>autumn</artifactId>
         <groupId>gg.amy.autumn</groupId>
-        <version>0.0.1</version>
+        <version>0.0.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
 
-        <autumn.json.version>0.0.1</autumn.json.version>
+        <autumn.json.version>${project.version}</autumn.json.version>
 
         <hjson.version>3.0.0</hjson.version>
     </properties>
