--- a/autumn-di/pom.xml
+++ b/autumn-di/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>autumn</artifactId>
         <groupId>gg.amy.autumn</groupId>
-        <version>0.0.1</version>
+        <version>0.0.3</version>
     </parent>
 
     <artifactId>autumn-di</artifactId>
@@ -15,7 +15,7 @@
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
 
-        <autumn.config.version>0.0.1</autumn.config.version>
+        <autumn.config.version>${project.version}</autumn.config.version>
 
         <classgraph.version>4.8.105</classgraph.version>
     </properties>
