--- a/autumn-example/pom.xml
+++ b/autumn-example/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>autumn</artifactId>
         <groupId>gg.amy.autumn</groupId>
-        <version>0.0.1</version>
+        <version>0.0.3</version>
     </parent>
 
     <artifactId>autumn-example</artifactId>
@@ -15,7 +15,7 @@
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
 
-        <autumn.web.version>0.0.1</autumn.web.version>
+        <autumn.web.version>${project.version}</autumn.web.version>
 
         <logback.version>1.2.3</logback.version>
     </properties>
