--- a/autumn-web/pom.xml
+++ b/autumn-web/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>autumn</artifactId>
         <groupId>gg.amy.autumn</groupId>
-        <version>0.0.1</version>
+        <version>0.0.3</version>
     </parent>
 
     <artifactId>autumn-web</artifactId>
@@ -15,8 +15,8 @@
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
 
-        <autumn.application.version>0.0.2</autumn.application.version>
-        <autumn.json.version>0.0.1</autumn.json.version>
+        <autumn.application.version>${project.version}</autumn.application.version>
+        <autumn.json.version>${project.version}</autumn.json.version>
 
         <netty.version>4.1.63.Final</netty.version>
     </properties>
