--- a/autumn-config/pom.xml
+++ b/autumn-config/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>autumn</artifactId>
         <groupId>gg.amy.autumn</groupId>
-        <version>0.0.3</version>
+        <version>0.0.4</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,8 +15,6 @@
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
 
-        <autumn.json.version>${project.version}</autumn.json.version>
-
         <hjson.version>3.0.0</hjson.version>
     </properties>
 
@@ -24,7 +22,7 @@
         <dependency>
             <groupId>gg.amy.autumn.json</groupId>
             <artifactId>autumn-json</artifactId>
-            <version>${autumn.json.version}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
