--- a/autumn-data/pom.xml
+++ b/autumn-data/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>autumn</artifactId>
         <groupId>gg.amy.autumn</groupId>
-        <version>0.0.3</version>
+        <version>0.0.4</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,8 +15,6 @@
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
 
-        <autumn.application.version>0.0.2</autumn.application.version>
-        <autumn.json.version>0.0.1</autumn.json.version>
 
         <hikari.version>4.0.3</hikari.version>
         <postgres.version>42.2.20</postgres.version>
@@ -26,13 +24,13 @@
         <dependency>
             <groupId>gg.amy.autumn</groupId>
             <artifactId>autumn-application</artifactId>
-            <version>${autumn.application.version}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>gg.amy.autumn.json</groupId>
             <artifactId>autumn-json</artifactId>
-            <version>${autumn.json.version}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
